// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createBanner check customized logo... 1`] = `
<div
  class="headerBanner"
  id="headerBanner"
>
  <a
    aria-label="Solid logo"
    class="headerBannerLink"
    href="https://test.com"
    id="headerBannerLink"
  >
    <img
      alt="Solid logo"
      class="headerBannerIcon"
      id="headerBannerIcon"
      src="https://solidproject.org/assets/img/solid-emblem.svg"
    />
  </a>
  <div
    class="headerBannerRightMenu"
    id="headerBannerRightMenu"
  >
    <div
      class="headerBannerUserMenuNotDisplayed"
      id="loggedInMenuContainer"
    >
      <button
        class="headerUserMenuTrigger"
        id="loggedInMenuTrigger"
        type="button"
      >
        

        <svg
          fill="none"
          height="26"
          viewBox="0 0 26 26"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          
    
          <path
            clip-rule="evenodd"
            d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
            fill="#D8D8D8"
            fill-rule="evenodd"
            stroke="#8B8B8B"
          />
          
    
          <mask
            height="26"
            id="mask0"
            mask-type="alpha"
            maskUnits="userSpaceOnUse"
            width="26"
            x="0"
            y="0"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
              fill="white"
              fill-rule="evenodd"
              stroke="white"
            />
            
    
          </mask>
          
    
          <g
            mask="url(#mask0)"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
              fill="#8B8B8B"
              fill-rule="evenodd"
            />
            
    
          </g>
          

        </svg>
      </button>
      <nav
        aria-hidden="true"
        class="headerUserMenuNavigationMenuNotDisplayed"
        id="loggedInNav"
      >
        <ul
          class="headerUserMenuList"
          id="loggedInMenuList"
        >
          <li
            class="headerUserMenuListItem"
          >
            <a
              class="headerUserMenuLink"
              href="https://reflectechblog.wordpress.com/"
              id="headerUserMenuLink"
            />
          </li>
        </ul>
      </nav>
    </div>
    <hr
      class="headerVerticalHr"
      id="headerVerticalHr"
    />
    <div
      class="headerBannerUserMenu"
      id="helpMenuContainer"
    >
      <nav
        aria-hidden="true"
        class="headerUserMenuNavigationMenuNotDisplayed"
        id="helperNav"
      >
        <ul
          class="headerUserMenuList"
          id="helpMenuList"
        >
          <li
            class="headerUserMenuListItem"
          >
            <a
              class="headerUserMenuLink"
              href="https://reflectechblog.wordpress.com/"
              id="headerUserMenuLink"
            />
          </li>
        </ul>
      </nav>
      <button
        class="headerUserMenuTrigger"
        id="helpMenuTrigger"
        type="button"
      >
        <img
          alt="Help menu icon"
          class="headerUserMenuTriggerImg"
          id="headerHelpMenuIcon"
          src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
          style="filter: invert(1) brightness(1.5);"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`createBanner creates a link 1`] = `
<div
  class="headerBanner"
  id="headerBanner"
>
  <a
    aria-label="Solid logo"
    class="headerBannerLink"
    href="https://test.com"
    id="headerBannerLink"
  >
    <img
      alt="Solid logo"
      class="headerBannerIcon"
      id="headerBannerIcon"
      src="https://solidproject.org/assets/img/solid-emblem.svg"
    />
  </a>
  <div
    class="headerBannerRightMenu"
    id="headerBannerRightMenu"
  >
    <div
      class="headerBannerUserMenuNotDisplayed"
      id="loggedInMenuContainer"
    >
      <button
        class="headerUserMenuTrigger"
        id="loggedInMenuTrigger"
        type="button"
      >
        

        <svg
          fill="none"
          height="26"
          viewBox="0 0 26 26"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          
    
          <path
            clip-rule="evenodd"
            d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
            fill="#D8D8D8"
            fill-rule="evenodd"
            stroke="#8B8B8B"
          />
          
    
          <mask
            height="26"
            id="mask0"
            mask-type="alpha"
            maskUnits="userSpaceOnUse"
            width="26"
            x="0"
            y="0"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
              fill="white"
              fill-rule="evenodd"
              stroke="white"
            />
            
    
          </mask>
          
    
          <g
            mask="url(#mask0)"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
              fill="#8B8B8B"
              fill-rule="evenodd"
            />
            
    
          </g>
          

        </svg>
      </button>
      <nav
        aria-hidden="true"
        class="headerUserMenuNavigationMenuNotDisplayed"
        id="loggedInNav"
      >
        <ul
          class="headerUserMenuList"
          id="loggedInMenuList"
        >
          <li
            class="headerUserMenuListItem"
          >
            <a
              class="headerUserMenuLink"
              href="https://reflectechblog.wordpress.com/"
              id="headerUserMenuLink"
            />
          </li>
        </ul>
      </nav>
    </div>
    <hr
      class="headerVerticalHr"
      id="headerVerticalHr"
    />
    <div
      class="headerBannerUserMenu"
      id="helpMenuContainer"
    >
      <nav
        aria-hidden="true"
        class="headerUserMenuNavigationMenuNotDisplayed"
        id="helperNav"
      >
        <ul
          class="headerUserMenuList"
          id="helpMenuList"
        >
          <li
            class="headerUserMenuListItem"
          >
            <a
              class="headerUserMenuLink"
              href="https://reflectechblog.wordpress.com/"
              id="headerUserMenuLink"
            />
          </li>
        </ul>
      </nav>
      <button
        class="headerUserMenuTrigger"
        id="helpMenuTrigger"
        type="button"
      >
        <img
          alt="Help menu icon"
          class="headerUserMenuTriggerImg"
          id="headerHelpMenuIcon"
          src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
          style="filter: invert(1) brightness(1.5);"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`createHelpMenu creates a menu.... 1`] = `
<div
  class="headerBannerUserMenu"
  id="helpMenuContainer"
>
  <nav
    aria-hidden="true"
    class="headerUserMenuNavigationMenuNotDisplayed"
    id="helperNav"
  >
    <ul
      class="headerUserMenuList"
      id="helpMenuList"
    />
  </nav>
  <button
    class="headerUserMenuTrigger"
    id="helpMenuTrigger"
    type="button"
  >
    <img
      alt="Help menu icon"
      class="headerUserMenuTriggerImg"
      id="headerHelpMenuIcon"
      src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
      style="filter: invert(1) brightness(1.5);"
    />
  </button>
</div>
`;

exports[`createLoginSignUpButtons creates div 1`] = `
<div
  class="headerButtonsDiv"
  id="headerButtonsDiv"
>
  <div>
    <div
      class="SolidSignInOrSignUpBox"
      style="display:flex;"
    >
      <input
        style="padding: 1em; border-radius:0.2em; font-size: 100%;margin: 0.75em 0 0.75em 0.5em !important; padding: 0.5em !important;background-color: #eef;"
        type="button"
        value="Log in"
      />
      <input
        style="padding: 1em; border-radius:0.2em; font-size: 100%;margin: 0.75em 0 0.75em 0.5em !important; padding: 0.5em !important;background-color: #efe;"
        type="button"
        value="Sign Up for Solid"
      />
    </div>
  </div>
</div>
`;

exports[`createUserMenu creates a menu.... 1`] = `
<div
  class="headerBannerUserMenuNotDisplayed"
  id="loggedInMenuContainer"
>
  <button
    class="headerUserMenuTrigger"
    id="loggedInMenuTrigger"
    type="button"
  >
    

    <svg
      fill="none"
      height="26"
      viewBox="0 0 26 26"
      width="26"
      xmlns="http://www.w3.org/2000/svg"
    >
      
    
      <path
        clip-rule="evenodd"
        d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
        fill="#D8D8D8"
        fill-rule="evenodd"
        stroke="#8B8B8B"
      />
      
    
      <mask
        height="26"
        id="mask0"
        mask-type="alpha"
        maskUnits="userSpaceOnUse"
        width="26"
        x="0"
        y="0"
      >
        
        
        <path
          clip-rule="evenodd"
          d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
          fill="white"
          fill-rule="evenodd"
          stroke="white"
        />
        
    
      </mask>
      
    
      <g
        mask="url(#mask0)"
      >
        
        
        <path
          clip-rule="evenodd"
          d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
          fill="#8B8B8B"
          fill-rule="evenodd"
        />
        
    
      </g>
      

    </svg>
  </button>
  <nav
    aria-hidden="true"
    class="headerUserMenuNavigationMenuNotDisplayed"
    id="loggedInNav"
  >
    <ul
      class="headerUserMenuList"
      id="loggedInMenuList"
    >
      <li
        class="headerUserMenuListItem"
      >
        <a
          class="headerUserMenuLink"
          href="https://reflectechblog.wordpress.com/"
          id="headerUserMenuLink"
        />
      </li>
    </ul>
  </nav>
</div>
`;

exports[`createUserMenuButton creates a button 1`] = `
<button
  class="headerUserMenuButton"
  id="headerUserMenuButton"
/>
`;

exports[`createUserMenuItem creates a link 1`] = `
<li
  class="headerUserMenuListItem"
>
  <ul />
</li>
`;

exports[`createUserMenuLink creates a link 1`] = `
<a
  class="headerUserMenuLink"
  href="http://www.test.com"
  id="headerUserMenuLink"
/>
`;

exports[`getProfileImg returns an empty image 1`] = `
"
<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"26\\" height=\\"26\\" viewBox=\\"0 0 26 26\\" fill=\\"none\\">
    <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z\\" fill=\\"#D8D8D8\\" stroke=\\"#8B8B8B\\"/>
    <mask id=\\"mask0\\" mask-type=\\"alpha\\" maskUnits=\\"userSpaceOnUse\\" x=\\"0\\" y=\\"0\\" width=\\"26\\" height=\\"26\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z\\" fill=\\"white\\" stroke=\\"white\\"/>
    </mask>
    <g mask=\\"url(#mask0)\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z\\" fill=\\"#8B8B8B\\"/>
    </g>
</svg>"
`;

exports[`header is exposed on public API 1`] = `undefined`;

exports[`rebuildHeader creates a link 1`] = `[Function]`;
